--- a/05-covariates.Rmd
+++ b/05-covariates.Rmd
@@ -970,7 +970,7 @@ distal.glm <- glm(incarc ~ 1 + int + slp,
 summary(distal.glm)
 externalizing <- externalizing %>% select(-c(int, slp))
 ```
-Now our slope effect is no-where near significance. The correlation between the factor scores here is even higher ($r =$ `r round(cor(factor.scores)[2,1], 3)`) so our VIF is `r car::vif(distal.glm)` which might contribute to that. However, part of it is that factor scores and EM estimates are different ways of estimating an unobserved quantity so we will get different results depending on our approach. One common alternative in SEMs is to go ahead and include the distal outcome into the same model that estimates the trajectory and estimate everything simultaneously we can see the syntax for this model below. The inclusion of the new parameters are trivial from a syntax perspective; we just add the regression directly. However, because `incarc` is a binary variable, we need to include new options in the `growth()` function. Specifically, we change the estimator to `"WLSMV"` (see [here](https://lavaan.ugent.be/tutorial/est.html) for details on different estimator options) and indicate that `incarc` is a categorical variable with `ordered = "incarc"`.
+Now our slope effect is no-where near significance. The correlation between the factor scores here is even higher ($r =$ `r round(cor(factor.scores)[2,1], 3)`) so our VIF is `r round(car::vif(distal.glm)[1], 3)` which might contribute to that. However, part of it is that factor scores and EM estimates are different ways of estimating an unobserved quantity so we will get different results depending on our approach. One common alternative in SEMs is to go ahead and include the distal outcome into the same model that estimates the trajectory and estimate everything simultaneously we can see the syntax for this model below. The inclusion of the new parameters are trivial from a syntax perspective; we just add the regression directly. However, because `incarc` is a binary variable, we need to include new options in the `growth()` function. Specifically, we change the estimator to `"WLSMV"` (see [here](https://lavaan.ugent.be/tutorial/est.html) for details on different estimator options) and indicate that `incarc` is a categorical variable with `ordered = "incarc"`.
 
 ```{r outcomes 08, message = FALSE, warning = FALSE, error = FALSE, eval = FALSE}
 sim.lcm <- "int =~ 1*ext6 + 1*ext8 + 1*ext10 + 1*ext12 + 1*ext14
@@ -985,7 +985,7 @@ sim.lcm.fit <- growth(sim.lcm,
                       ordered = "incarc")
 ```
 
-Unfortunately, when we try to estimate this model, we get an error message `lavaan ERROR: data contains no observations`, which should be slighly concerning... What is happening here is that in this dataset, because no one person is observed on adjacent measures (e.g., `ext6` & `ext7`), everyone has missing data. This was not an issue in the linear versions of the model because we could use Maximum Likelihood, however, currently **lavaan** does not support categorical ML, and WLSMV will listwise delete individuals with missing data. Unfortunately for us, that's $100$\% of adolescents in our sample. We would need to turn to **Mplus** or another program for results from this model.
+Unfortunately, when we try to estimate this model, we get an error message `lavaan ERROR: data contains no observations`, which should be slighly concerning... What is happening here is that in this dataset, because no one person is observed on adjacent measures (e.g., `ext6` & `ext7`), everyone has missing data. This was not an issue in the linear versions of the model because we could use Maximum Likelihood, however, currently **lavaan** does not support categorical ML, and WLSMV will listwise delete individuals with missing data. Unfortunately for us, that's $100$ percent of adolescents in our sample. We would need to turn to **Mplus** or another program for results from this model.
 
 As we mentioned, this area of methodological research is still relatively under-developed and awaits solutions to many of the limitations we have run into here.
 
